2011-05-03 Till Tantau <tantau@users.sourceforge.net>

	- graph drawing: Started to cleanup pgf and tikz layers. Ongoing...

2011-05-03 Jannis Pohlmann <jannis@xfce.org>

		- Fix Walshaw algorithm to properly set the subnodes when copying
		  the coarse graphs. Simplify the code that updates the node
		  coordinates.

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graphdrawing:
	  - Modify the doclet to allow underscores in parameter names.
		- Document the Vector class as well as the table, iter and traversal
		  helpers.
		- Remove old table and iterator helpers. Rename helper files. Rename
		  table.merge() and table.copy() to table.custom_merge() and
		  table.custom_copy() to avoid name clashes with luatools. Add 
		  string helpers, including string.parse_braces(). Update algorithms 
		  to work with these changes.
		- Allow vectors to have an origin vector, similar to the Position
		  class. Introduce new alternative table-based syntax for
		  Vector:set() that is much easier to read. Update unit tests
		  and algorithms. 

2011-05-02 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- fpu: added support for log10 and log2

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graphdrawing: 
	  - Drop the 'not yet positionedPGFGDINTERNAL' node name prefix
	    internally. It's stripped off now when nodes are passed over to
	  	Lua and its added back again when shipping the node out to TeX.
	  -	Drop the Node:shortname() method which is no longer needed.
	  - Improve coding style and documentation of the Interface, Sys, 
	    Node, Edge and Graph classes. 
	  - Rename Sys:logMessage() to Sys:log().
	  - Make parameter labels in the API docs not appear in bold.
		- Disable verbose logging by default.
		- Add methods Edge:getNodes() and Node:getEdges().

2011-05-02 Jannis Pohlmann <jannis@xfce.org>

	- graphdrawing: 
	  - Initial work on spring-electrical and layered drawing algorithms.
		- Major rework of the Lua code of the graphdrawing library: added