@@ -109,9 +109,16 @@ function drawGraphAlgorithm_localsearchgraph(graph)
       origNodesMap[node.name].pos:set{x = node.pos:x()}
       origNodesMap[node.name].pos:set{y = node.pos:y()}
    end
-   for path in table.value_iter(endState.paths) do
-      Sys:log("LSG:GD: Path ", tostring(path))
-   end
+
+   -- NOTE: Printing these paths will result in an infinite loop
+   -- because there is a circle of node positions that depend on
+   -- each other; printing the path will try to compute the 
+   -- absolute values of each of these node positions and will
+   -- loop infinitely.
+   --
+   --for path in table.value_iter(endState.paths) do
+   --   Sys:log("LSG:GD: Path ", tostring(path))
+   --end
 end
 
 --- generic local search algorithm
