@@ -1,16 +1,24 @@
+2011-05-04 Jannis Pohlmann <jannis@xfce.org>
+
+	- graph drawing: 
+	  - Initial work on a quad tree implementation for spring and spring
+		  electrical algorithms, with unit test.
+		- Improve the internals of the Vector class.
+
 2011-05-03 Till Tantau <tantau@users.sourceforge.net>
 
 	- graph drawing: Started to cleanup pgf and tikz layers. Ongoing...
 
 2011-05-03 Jannis Pohlmann <jannis@xfce.org>
 
+	- graph drawing:
 		- Fix Walshaw algorithm to properly set the subnodes when copying
 		  the coarse graphs. Simplify the code that updates the node
 		  coordinates.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
-	- graphdrawing:
+	- graph drawing:
 	  - Modify the doclet to allow underscores in parameter names.
 		- Document the Vector class as well as the table, iter and traversal
 		  helpers.
@@ -30,7 +38,7 @@
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
-	- graphdrawing: 
+	- graph drawing: 
 	  - Drop the 'not yet positionedPGFGDINTERNAL' node name prefix
 	    internally. It's stripped off now when nodes are passed over to
 	  	Lua and its added back again when shipping the node out to TeX.
@@ -44,7 +52,7 @@
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
-	- graphdrawing: 
+	- graph drawing: 
 	  - Initial work on spring-electrical and layered drawing algorithms.
 		- Major rework of the Lua code of the graphdrawing library: added
 		  a Vector class for improved math operations and node positioning,
@@ -52,7 +60,7 @@
 			post-processing code for fixing the orientation of graph drawings,
 			updated the graph/node/edge data structures to store nodes in the order
 			they appear instead of storing them in a random order, implement
-			coordinate keys for nodes, implement 
+			coordinate keys for nodes, and much more.
 
 2011-04-30  Christian Feuersaenger <ludewich@users.sourceforge.net>
 
